# info_collector

./: .gitignore  README.md  config.py  main.py  pyproject.toml
util/: util.py
zhihu_favourite/: __init__.py  io_util.py  network_util.py  public_util.py  split_raw.py  update_metadata.py  wash_main.py  wash_splited.py  zhihu_favourite_wash.py
zhihu_favourite/public/: io_util.py  network_util.py  public_util.py
