[project]
name = "rag-prepare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "lxml>=6.0.4",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.1",
]
